=== HEAD

* Make Dataset#insert work on PostgreSQL if the table name is a SQL::PlaceholderLiteralString (jeremyevans) (#736)

* Copy unique constraints when emulating alter_table operations on SQLite (jeremyevans) (#735)

* Don't return clob column values as SQL::Blob instances in the db2 and ibmdb adapters unless use_clob_as_blob is true (jeremyevans)

* Make use_clob_as_blob false by default on DB2 (jeremyevans)

* Fix usage of Sequel::SQL::Blob objects as prepared statement arguments in jdbc/db2 adapter when use_clob_as_blob is false (jeremyevans)

* Add mssql_optimistic_locking plugin, using a timestamp/rowversion column to protect against concurrent updates (pinx, jeremyevans) (#731)

* Make Model.primary_key array immutable for composite keys (chanks) (#730)

=== 4.4.0 (2013-11-01)

* Make Database#tables not show tables in the recycle bin on Oracle (jeremyevans) (#728)

* Don't automatically order on all columns when emulating offsets for unordered datasets on DB2 (jeremyevans)

* Improve PostgreSQL type support in the jdbc/postgresql adapter (jeremyevans)

* Make offset emulation on Oracle work when using columns that can't be ordered (jeremyevans, sdeming) (#724, #725)

* Make filter by associations support handle associations with :conditions or block (jeremyevans)

* Make association cloning handle :block correctly for clones of clones (jeremyevans)

* Make association cloning handle :eager_block option correctly (jeremyevans)

* Make add_primary_key work on h2 (jeremyevans)

* Add support for foreign key parsing on Oracle (jeremyevans)

* Add support for foreign key parsing to the jdbc adapter (jeremyevans)

* Make add_foreign_key work on HSQLDB (jeremyevans)

* Add table_select plugin for selecting table.* instead of * for model datasets (jeremyevans)

* Issue constraint_validation table deletes before inserts, so modifying constraint via drop/add in same alter_table block works (jeremyevans)
